# camp2017-bot

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: config-sample.py  keyword-sample.json  main.py  send_scanner.py  teams-sample.json
app/models/: __init__.py  coupon.py  keyword.py  team.py
