[tool.poetry]
name = "camp2017-bot"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.0"
mongoengine = "^0.28.2"
Flask = "^3.0.3"
pyTelegramBotAPI = "^4.20.0"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
